(master): Fix alignment of refresh button

--- a/src/pages/dashboard/insight-center/insight-center.sass
+++ b/src/pages/dashboard/insight-center/insight-center.sass
@@ -4,6 +4,7 @@
   padding-bottom: 50px
   .insight-center-title
     margin-bottom: 15px
+    display: inline-block
   .sub-title
     margin-top: 20px
     margin-bottom: 20px
